[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagetokens"
version = "0.1.0"
description = "A lightweight library for image tokenization and dataset loading in PyTorch."
readme = "README.md"
authors = [{ name = "Isaac Adjei-Mensah", email = "iadjeimensah@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "pillow>=10.0"
]
keywords = ["image", "tokenization", "pytorch", "dataset", "vision"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.package-dir]
"" = "src"

[project.urls]
Homepage = "https://pypi.org/project/imagetokens/"
Source = "https://github.com/yourusername/imagetokens"
